--- a/zalo-hub-feat-auto-number/package.json
+++ b/zalo-hub-feat-auto-number/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
@@ -49,15 +50,16 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "emoji-mart": "^5.6.0",
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^16.0.8",
     "next-themes": "^0.4.4",
-    "react": "^19",
+    "react": "^19.2.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^19.2.1",
     "react-dropzone": "latest",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
