--- a/zalo-hub-backend-feat-auto-number/package.json
+++ b/zalo-hub-backend-feat-auto-number/package.json
@@ -25,7 +25,8 @@
     "seed:regular": "ts-node -r tsconfig-paths/register src/seed/regular-user.seed.ts",
     "seed:bulk": "ts-node -r tsconfig-paths/register src/seed/bulk-users.seed.ts",
     "seed:territories": "ts-node -r tsconfig-paths/register src/seed/territories.seed.ts",
-    "seed:all": "npm run seed:admin && npm run seed:regular && npm run seed:territories"
+    "seed:user-ranks": "ts-node -r tsconfig-paths/register src/seed/user-ranks.seed.ts",
+    "seed:all": "npm run seed:admin && npm run seed:regular && npm run seed:territories && npm run seed:user-ranks"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
